k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: voting-app
  labels:
    name: voting-app
    tier: application
